--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "todotxtaas",
   "version": "1.0.0",
   "description": "TODOTXTaaS ===",
-  "main": "index.js",
+  "main": "index.coffee",
   "dependencies": {
     "express": "^4.12.3",
     "express-static": "^1.0.3",
+    "jstodotxt": "^0.6.0",
     "mongoose": "^4.0.1",
     "mrtodotxt": "^0.1.0",
-    "sass-middleware": "0.0.3"
+    "sass-middleware": "0.0.3",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {},
   "scripts": {
@@ -23,6 +25,5 @@
   "bugs": {
     "url": "https://github.com/1egoman/todotxtaas/issues"
   },
-  "homepage": "https://github.com/1egoman/todotxtaas",
-  "main": "index.coffee"
+  "homepage": "https://github.com/1egoman/todotxtaas"
 }
