--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "TODOTXTaaS ===",
   "main": "index.coffee",
   "dependencies": {
+    "body-parser": "^1.12.2",
     "express": "^4.12.3",
     "express-static": "^1.0.3",
     "jstodotxt": "^0.6.0",
