--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mrtodotxt",
   "version": "0.0.1",
   "description": "TODO.txt server",
-  "main": "index.js",
+  "main": "index.coffee",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,7 +12,7 @@
     "body-parser": "^1.12.2",
     "express": "^4.12.3",
     "express-static": "^1.0.3",
-    "jstodotxt": "^0.5.1",
+    "jstodotxt": "^0.6",
     "underscore": "^1.8.2"
   }
 }
