--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.12.3",
     "express-static": "^1.0.3",
     "jstodotxt": "^0.6",
+    "mongoose": "^4.0.1",
     "underscore": "^1.8.2"
   }
 }
