--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-static": "^1.0.3",
     "jstodotxt": "^0.6",
     "mongoose": "^4.0.1",
+    "request": "^2.55.0",
     "underscore": "^1.8.2"
   }
 }
